--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -1,3 +1,12 @@
 .scheme-two {
  transform: rotate(180deg); 
 }
+
+.automa-player {
+  display:none;
+}
+
+.automa-player.current {
+  display:inline-block;
+  margin:0 auto;
+}
